# omni-agent

./: CMakeLists.txt  README.md  package.xml
cmake/: FetchThirdParty.cmake  webrtc_audio_processing.cmake
examples/: main_voice_chat.cpp  main_voice_chat_aec.cpp  voice_chat.cpp
inc/: aec_duplex_processor.hpp  engine_init.hpp  text_buffer.hpp
include/: engine_init.hpp
src/: aec_duplex_processor.cpp  engine_init.cpp  mcp_helper.cpp  text_buffer.cpp  voice_common.cpp  voice_pipeline.cpp
